sources += files(
'Base64/base64.cpp',
'MicroPather/micropather.cpp',
'glad/gl.c',
'Semver200/Semver200_comparator.cpp',
'Semver200/Semver200_modifier.cpp',
'Semver200/Semver200_parser.cpp',
'StandardIncludes.cpp',
'AllegroTools.cpp',
'Atom.cpp',
'Box.cpp',
'Color.cpp',
'ContentFile.cpp',
'Controller.cpp',
'DataModule.cpp',
'Entity.cpp',
'GenericSavedData.cpp',
'GLCheck.cpp',
'GraphicalPrimitive.cpp',
'InputMapping.cpp',
'InputScheme.cpp',
'Matrix.cpp',
'PathFinder.cpp',
'PieQuadrant.cpp',
'Reader.cpp',
'ReloadDLL.cpp',
'RTEError.cpp',
'RTETools.cpp',
'Serializable.cpp',
'Shader.cpp',
'SpatialPartitionGrid.cpp',
'System.cpp',
'Timer.cpp',
'Vector.cpp',
'Writer.cpp',
)

if host_machine.system() == 'windows'
  sources += files(
	'StackWalker/StackWalker.cpp',
    'RTEStackTrace.cpp',
  )
endif
